--- a/UnofficialCrusaderPatch/Localization/English.txt
+++ b/UnofficialCrusaderPatch/Localization/English.txt
@@ -399,7 +399,7 @@ the 'Uninstall'-button or manually.
 
 
 At this point I would like to thank the Stronghold community for supporting &
-me so enthusiastic.
+me so enthusiastically.
 
 Special thanks go to:
 FireFly Studios for the creation of the Stronghold series
