--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -374,17 +374,6 @@ Ta opcja sprawia, że jednostki atakują również budynki cywilne i fortyfikacy
 oraz części ścian, które są już atakowane przez jedną jednostkę."
 }
 
-o_onlyai
-{
-	"Aktywuj tryb Spectator"
-}
-
-o_onlyai_descr
-{
-	"Usuwa głównego gracza, dzięki czemu możesz tylko obserwować i tworzyć pojedynki między osmioma botami. &
-Savegames ładuje się teraz poprawnie w tym trybie."
-}
-
 ui_welcometext
 {
 "Jest to nieoficjalna łatka dla Twierdzy Krzyżowej.
@@ -417,7 +406,54 @@ aiv_evreypitch
 
 aiv_evreypitch_descr
 {
-	"Rozszerza "stałe zamki waniliowe Evrey", dodając mangonele i &
+	"Rozszerza 'stałe zamki waniliowe Evrey', dodając mangonele i &
 ballisty do wież Wezyla, Wieprza, Nizara i Emira. Edytowany przez &
 PitchNeeded."
+}
+
+
+
+
+
+
+
+
+
+// 5.12.2018
+
+o_onlyai
+{
+	"Aktywuj tryb Spectator [bug possible]"
+}
+
+o_onlyai_descr
+{
+	"Usuwa głównego gracza, dzięki czemu możesz tylko obserwować i tworzyć &
+pojedynki między osmioma botami. Savegames ładuje się teraz poprawnie w tym &
+trybie. Sometimes a bug appears in which random objects spawn all over the map. &
+This is just visually and can be removed by saving the game, ending the mission &
+and reloading the save file."
+}
+
+o_moatvisibility
+{
+	"Always show planned moat"
+}
+
+o_moatvisibility_descr
+{
+	"Your own placed but not digged out moat will always be shown with this &
+setting, even if you deselect the moat placing."
+}
+
+o_engineertent
+{
+	"No siege tent deselection"
+}
+
+o_engineertent_descr
+{
+	"With this setting, the game will not deselect your chosen siege equipment &
+after placing one tent anymore. This way you can create several tents after another &
+without having to reselect the same siege equipment every time."
 }
