--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -338,8 +338,8 @@ ai_nosleep
 ai_nosleep_descr
 {
 	"ИИ обычно ставит свои обрабатывающие здания в сон, &
-поскольку необходимый ресурс отсутствует. Это делается без учета потери продуктов, & которые находятся на пути  в в Оружейную.
-Эта функция может быть полностью отключена здесь.
+поскольку необходимый ресурс отсутствует. Это делается без учета потери продуктов, &
+которые находятся на пути  в в Оружейную. Эта функция может быть полностью отключена здесь.
 }
 
 
@@ -366,22 +366,10 @@ ai_attackwave
 ai_attackwave_descr
 {
 	"AI в атаке в ванили посылает сразу столько же войск, как и & 
-	тогда когда стены целые.Это заставляет единицы падать в маленьких волнах &
-	когда у целевого замка много зданий прямо у его стен
-	"Этот вариант позволяет подразделениям атаковать гражданские & и фортификационные здания,
-а также стены, которые уже атакованы одной единицей.
-}
-
-
-o_onlyai
-{
-	"Активировать Режим - Зрителя (Только AI)"
-}
-
-o_onlyai_descr
-{
-	"Убирает игрока 1, чтобы вы могли видеть только 8 ИИ в одном и том же режиме. &
- Сохранения игры теперь правильно загружаются в этом режиме."
+тогда когда стены целые.Это заставляет единицы падать в маленьких волнах &
+когда у целевого замка много зданий прямо у его стен Этот вариант позволяет &
+подразделениям атаковать гражданские & и фортификационные здания, &
+а также стены, которые уже атакованы одной единицей."
 }
 
 ui_welcometext
@@ -389,7 +377,7 @@ ui_welcometext
 "Это неофициальный патч для Stronghold Crusader.
 Проект доступен с открытым исходным кодом через [ref].
 
-Любая версия Crusader потенциально поддерживается, но поскольку изменения,
+Любая версия Crusader потенциально поддерживается, но поскольку изменения, &
 выведенный со Steam версией 1.41, могут возникнуть несовместимости. Настройка &
 затем отобразит сообщения об ошибках. Установленная версия исправления показана в &
 нижнем левом углу главного меню.
@@ -419,4 +407,54 @@ aiv_evreypitch_descr
 	"Расширяет «улучшеные ванильные замки Evrey», добавляя мангонелей и &
 баллистов к башням Вазира, Свиньи, Низара и Эмира. Отредактировано &
 PitchNeeded «.
+}
+
+
+
+
+
+
+
+
+
+
+
+
+// 5.12.2018
+
+o_onlyai
+{
+	"Активировать Режим - Зрителя (Только AI) [bug possible]"
+}
+
+o_onlyai_descr
+{
+	"Убирает игрока 1, чтобы вы могли видеть только 8 ИИ в одном и том же режиме. &
+Сохранения игры теперь правильно загружаются в этом режиме. Sometimes a bug &
+appears in which random objects spawn all over the map. This is just visually &
+and can be removed by saving the game, ending the mission and reloading the &
+save file."
+}
+
+o_moatvisibility
+{
+	"Always show planned moat"
+}
+
+o_moatvisibility_descr
+{
+	"Your own placed but not digged out moat will always be shown with this &
+setting, even if you deselect the moat placing."
+}
+
+o_engineertent
+{
+	"No siege tent deselection"
+}
+
+o_engineertent_descr
+{
+	"With this setting, the game will not deselect your chosen siege equipment &
+after placing one tent anymore. This way you can create several tents after another &
+without having to reselect the same siege equipment every time."
 }
