Update Russian Translation ! 6.12.2018
Update Russian Translation ! 6.12.2018

--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -22,12 +22,12 @@ u_ArabWall_descr
 {
 	"В Ваниле арабские мечники разрушают стены медленнее любого другого подразделения ближнего боя. &
 С этой опцией скорость удара против стен примерно удваивается для них,
-положив их немного выше копейщиков."
+поставив их немного выше копейщиков."
 }
 
 u_spearmen
 {
-	"Увеличенная броню копейщиков против дальних юнитов"
+	"Увеличенная броня копейщиков против дальних юнитов"
 }
 
 u_spearmen_descr
@@ -218,7 +218,7 @@ o_responsivegates_descr
 {
 	"Ворота закрывается позже &
 когда опасность исчезнет. Расстояние врага, для которого закрываются ворота &
-будет уменьшено с 200 до 140. Время, после которого ворота открываются &
+будет уменьшено с 200 до 140. Время, после которого ворота открываются, &
 будет уменьшены с 1200 до 100."
 }
 
@@ -252,7 +252,7 @@ u_laddermen
 
 u_laddermen_descr
 {
-	" - Крестияне с лестницами умирают после 12 стрелок  вместо 5
+	" - Крестияне с лестницами умирают после 12 стрел  вместо 5
   - Крестияне с лестницами умирают после 5 выстрелов арбалетов или пращников & вместо 2
   - Крестияне с лестницами стоят 20 золотых вместо 4"
 }
@@ -337,9 +337,9 @@ ai_nosleep
 
 ai_nosleep_descr
 {
-	"ИИ обычно ставит свои обрабатывающие здания в сон, &
+	"AI обычно ставит свои обрабатывающие здания в сон, &
 поскольку необходимый ресурс отсутствует. Это делается без учета потери продуктов, &
-которые находятся на пути  в в Оружейную. Эта функция может быть полностью отключена здесь.
+которые находятся на пути в Оружейную. Эта функция может быть полностью отключена здесь.
 }
 
 
@@ -350,7 +350,7 @@ ai_overclock
 
 ai_overclock_descr
 {
-	"Интервал, в течение которого ИИ наводит порядок, т. Е. атакующие заказы &
+	"Интервал, в течение которого AI наводит порядок, т. Е. атакующие заказы &
 для единиц. Это уменьшает время, в течение которого единицы стоят вокруг, ничего не делая &
 после уничтожения / убийства своей последней цели.
 
@@ -366,8 +366,8 @@ ai_attackwave
 ai_attackwave_descr
 {
 	"AI в атаке в ванили посылает сразу столько же войск, как и & 
-тогда когда стены целые.Это заставляет единицы падать в маленьких волнах &
-когда у целевого замка много зданий прямо у его стен Этот вариант позволяет &
+тогда когда стены целые.Это заставляет единицы умирать в маленьких волнах &
+когда у целевого замка много зданий прямо у его стен. Этот вариант позволяет &
 подразделениям атаковать гражданские & и фортификационные здания, &
 а также стены, которые уже атакованы одной единицей."
 }
@@ -405,7 +405,7 @@ aiv_evreypitch
 aiv_evreypitch_descr
 {
 	"Расширяет «улучшеные ванильные замки Evrey», добавляя мангонелей и &
-баллистов к башням Вазира, Свиньи, Низара и Эмира. Отредактировано &
+баллист к башням Вазира, Кабана, Низара и Эмира. Отредактировано &
 PitchNeeded «.
 }
 
@@ -424,37 +424,37 @@ PitchNeeded «.
 
 o_onlyai
 {
-	"Активировать Режим - Зрителя (Только AI) [bug possible]"
+	"Активировать Режим - Зрителя (Только AI) [Возможны баги]"
 }
 
 o_onlyai_descr
 {
 	"Убирает игрока 1, чтобы вы могли видеть только 8 ИИ в одном и том же режиме. &
-Сохранения игры теперь правильно загружаются в этом режиме. Sometimes a bug &
-appears in which random objects spawn all over the map. This is just visually &
-and can be removed by saving the game, ending the mission and reloading the &
-save file."
+Сохранения игры теперь правильно загружаются в этом режиме. Иногда ошибка &
+появляется, когда случайные объекты появляются на всей карте. Это просто визуальный баг &
+и его можно убрать &, сохранив игру, завершая миссию и перезагружая &
+сохранить файл."
 }
 
 o_moatvisibility
 {
-	"Always show planned moat"
+	"Всегда показывать планированый ров"
 }
 
 o_moatvisibility_descr
 {
-	"Your own placed but not digged out moat will always be shown with this &
-setting, even if you deselect the moat placing."
+	"Ваш собственный,но не выкопанный ров всегда будет показан & с этой опцией, даже 
+	если вы отмените выбор размещения рва."
 }
 
 o_engineertent
 {
-	"No siege tent deselection"
+	"Нету выбора осадной палатки"
 }
 
 o_engineertent_descr
 {
-	"With this setting, the game will not deselect your chosen siege equipment &
-after placing one tent anymore. This way you can create several tents after another &
-without having to reselect the same siege equipment every time."
+	"С помощью этой настройки игра не отменяет выбранное вами осадное оборудование &
+после размещения больше одной палатки. Таким образом, вы можете & создать несколько палаток за другим,
+без необходимости повторного выбора & одного и того же осадного оборудования."
 }
