--- a/UnofficialCrusaderPatch/Localization/Polish.txt
+++ b/UnofficialCrusaderPatch/Localization/Polish.txt
@@ -423,37 +423,37 @@ PitchNeeded."
 
 o_onlyai
 {
-	"Aktywuj tryb Spectator [bug possible]"
+	"Aktywuj tryb Spectator [Możliwy Błąd]"
 }
 
 o_onlyai_descr
 {
 	"Usuwa głównego gracza, dzięki czemu możesz tylko obserwować i tworzyć &
-pojedynki między osmioma botami. Savegames ładuje się teraz poprawnie w tym &
-trybie. Sometimes a bug appears in which random objects spawn all over the map. &
-This is just visually and can be removed by saving the game, ending the mission &
-and reloading the save file."
+pojedynki między osmioma botami. Gra ładuje się teraz poprawnie w tym &
+trybie. Czasami pojawia się błąd, w którym losowe obiekty odradzają się na całej mapie. &
+Jest to tylko wizualnie i można je usunąć, zapisując grę, kończąc misję i
+i ponownie załadować plik zapisu."
 }
 
 o_moatvisibility
 {
-	"Always show planned moat"
+	"Zawsze pokazuj planowaną fosę"
 }
 
 o_moatvisibility_descr
 {
-	"Your own placed but not digged out moat will always be shown with this &
-setting, even if you deselect the moat placing."
+	"Fosa będzie zawsze pokazywana z tym &
+ustawienie, nawet jeśli odznaczasz umieszczenie fosy."
 }
 
 o_engineertent
 {
-	"No siege tent deselection"
+	"Bez wyboru cofnięcia namiotu oblężniczego"
 }
 
 o_engineertent_descr
 {
-	"With this setting, the game will not deselect your chosen siege equipment &
-after placing one tent anymore. This way you can create several tents after another &
-without having to reselect the same siege equipment every time."
+	"Przy tym ustawieniu, gra nie odznacza wybranego urządzenia oblężniczego i
+po umieszczeniu już jednego namiotu. W ten sposób możesz stworzyć kilka namiotów po drugim i
+bez konieczności ponownego wybierania tego samego sprzętu oblężniczego za każdym razem."
 }
