--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -20,8 +20,8 @@ u_ArabWall
 
 u_ArabWall_descr
 {
-	"В Ваниле арабские мечники разрушают стены медленнее любого другого подразделения ближнего боя. &
-С этой опцией скорость удара против стен примерно удваивается для них,
+	"В Ваниле арабские мечники разрушают стены медленнее любого другого подразделения &
+ближнего боя. С этой опцией скорость удара против стен примерно удваивается для них, &
 поставив их немного выше копейщиков."
 }
 
@@ -47,7 +47,7 @@ ai_buy_descr
 Следующие улучшения будут выполнены с этим:
   - Фредерик и Маршал покупают оружие и доспехи
   - Аббат и Эмир покупают луки
-  - Вазир покупает яблоки, также как Низар и Эмир
+  - Вазир покупает яблоки, также как Низар и Эмир"
 }
 
 ui_error
@@ -57,7 +57,7 @@ ui_error
 
 ui_SearchPath
 {
-	" Выберите папку установки:"
+	"Выберите папку установки:"
 }
 
 ui_search
@@ -301,7 +301,7 @@ ai_demolish_walls_descr
 ai_demolish_eco_descr
 {
 	"Если AI чуствует прессинг, он начинает разрушать свою экономику или &
-фортификационные здания, чтобы получить быстрые деньги для войск. Эта функция иногда & 
+фортификационные здания, чтобы получить быстрые деньги для войск. Эта функция иногда &
 кажется, запускается без какой-либо причины."
 }
 
@@ -339,7 +339,7 @@ ai_nosleep_descr
 {
 	"AI обычно ставит свои обрабатывающие здания в сон, &
 поскольку необходимый ресурс отсутствует. Это делается без учета потери продуктов, &
-которые находятся на пути в Оружейную. Эта функция может быть полностью отключена здесь.
+которые находятся на пути в Оружейную. Эта функция может быть полностью отключена здесь."
 }
 
 
@@ -406,7 +406,7 @@ aiv_evreypitch_descr
 {
 	"Расширяет «улучшеные ванильные замки Evrey», добавляя мангонелей и &
 баллист к башням Вазира, Кабана, Низара и Эмира. Отредактировано &
-PitchNeeded «.
+PitchNeeded «."
 }
 
 
@@ -443,8 +443,8 @@ o_moatvisibility
 
 o_moatvisibility_descr
 {
-	"Ваш собственный,но не выкопанный ров всегда будет показан & с этой опцией, даже 
-	если вы отмените выбор размещения рва."
+	"Ваш собственный,но не выкопанный ров всегда будет показан & с этой опцией, даже &
+если вы отмените выбор размещения рва."
 }
 
 o_engineertent
