--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -493,7 +493,7 @@ ai_attacknearest
 ai_attacknearest_descr
 {
 	"С этим параметром, Лорды АI всегда атакуют своих ближайших врагов. &
-Это предотвращает переключение войск во время штурма замка, а также отправку и
+Это предотвращает переключение войск во время штурма замка, а также отправку и &
 их мимо замков других врагов, чтобы собрать."
 }
 
@@ -528,7 +528,7 @@ ai_buywood
 ai_buywood_descr
 {
 	"Чтобы воры не могли украсть древесину которую АI только что купил для &
-	здания,2 единицы дополнительной деревесины теперь будет покупать для каждого здания.
+	здания,2 единицы дополнительной деревесины теперь будет покупать для каждого здания."
 }
 
 o_keys
