--- a/UnofficialCrusaderPatch/Localization/Russian.txt
+++ b/UnofficialCrusaderPatch/Localization/Russian.txt
@@ -514,7 +514,7 @@ ai_towerengines
 	"Нет лимита на осадные машины на вышках"
 }
 
-ai_towerenginesdescr
+ai_towerengines_descr
 {
 	"Обычно АI строит на своих башнях до трех мангонелей и баллист. &
 Этот лимит можно снять здесь."
